<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/icon_tint"
        android:title="@string/menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_more_vert"
        android:iconTint="@color/icon_tint"
        android:title="@string/cd_open_menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_saved_messages"
                android:title="@string/menu_saved_messages" />

            <item
                android:id="@+id/action_contacts"
                android:title="@string/menu_contacts" />

            <item
                android:id="@+id/action_settings"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/action_about"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/action_logout"
                android:title="@string/menu_logout" />
        </menu>

    </item>

</menu>
