<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_code_title"
        android:textAppearance="@style/TextAppearance.Telefarm.ItemTitle"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/codeSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:textAppearance="@style/TextAppearance.Telefarm.ItemSubtitle" />

    <TextView
        android:id="@+id/codeHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:textAppearance="@style/TextAppearance.Telefarm.Caption"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/auth_code_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="smsOTPCode"
            android:hint="@string/auth_code_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:letterSpacing="0.3"
            android:minHeight="@dimen/touch_target"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/codeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:minHeight="@dimen/touch_target"
        android:text="@string/auth_verify" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resendButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:minHeight="@dimen/touch_target"
        android:text="@string/auth_resend_code" />

</LinearLayout>
