<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_other_device_title"
        android:textAppearance="@style/TextAppearance.Telefarm.ItemTitle"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:text="@string/auth_other_device_subtitle"
        android:textAppearance="@style/TextAppearance.Telefarm.ItemSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmationLink"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:minHeight="@dimen/touch_target"
        android:text="@string/auth_other_device_open_link" />

</LinearLayout>
