<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000">

    <ImageView
        android:id="@+id/viewerImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/profile_photo"
        android:scaleType="fitCenter" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/viewerProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/viewerError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/photo_viewer_error"
        android:textColor="@color/text_on_accent"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewerClose"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/spacing_small"
        android:minHeight="@dimen/touch_target"
        android:text="@string/dialog_close"
        android:textColor="@color/text_on_accent"
        app:icon="@drawable/ic_close"
        app:iconTint="@color/text_on_accent" />

</FrameLayout>
